2013-09-14 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh: (CygbuildCygcheckLibraryDepSourceCpp):
	Remove "include.*getopt" check.

	* bin/cygbuild.sh: (CygbuildInstallExtraChmodMain): New.
	(CygbuildInstallExtraChmodBin): New.
	(CygbuildConfCC): Correct log output.

2013-09-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdDownloadCygwinPackage): Add ARCH
	support. By default download 32bit repository packages.
	(CYGBUILD_SRCPKG_URL): Update to ftp.inf.tu-dresden.de

2013-09-11 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES):
	Document config.{sub,guess} files ussage.

	* bin/cygbuild.sh (CygbuildCmdBuildPython): Change
	CYGBUILD_LDFLAGS from -no-undefined to -Wl,--no-undefined.
	(CygbuildFindConfigFileDir): New.
	(CygbuildDefineGlobalMain): New FILE_CONFIG_GUESS,
	FILE_CONFIG_SUB.
	(CygbuildCmdConfConfigFilesCopy): New.
	(CygbuildCmdConfMain): Call CygbuildCmdConfConfigFilesCopy().
	(CygbuildWasLibraryInstall): old WasLibraryInstall
	(CygbuildWasLibraryInstallMakefile): old WasLibraryInstallMakefile
	(CygbuildCmdScriptRunMain): Support -d flag.

2013-03-08 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCygcheckLibraryDepSourcePython):
	Do not warn about os.rename any longer. See
	http://mail.python.org/pipermail/python-dev/2007-May/072905.html

2013-03-07 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildBootVariablesGlobalMain):
	CYGBUILD_INSTALL_IGNORE add *MANIFEST* (with all globs).

2013-03-06 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdMkpatchMain): undo and restore
	patched in srcdir.
	(CygbuildPatchDiffstat): Add message: Patches touch files.
	(CygbuildPatchApplyQuiltMaybe): Respect verbose option in quilt
	messages better.
	(CygbuildCmdMkpatchMain): Copy also quilt .pc/ directory. Otherwise
	unpatching does not work and patch reports modified files.